--- a/frontend/src/assets/css/form.css
+++ b/frontend/src/assets/css/form.css
@@ -10,7 +10,12 @@
     line-height: none;
 }
 
+.chat > textarea:invalid {
 
+    outline: 1px solid red;
+    color: red;
+    content: "Rellene el campo por favor"
+}
 .chat > textarea:focus,
 .chat > textarea:active
   {
@@ -22,8 +27,9 @@
     font-family: var(--primary-font);
     padding: 10px;
     width: 100%;
-    height: 400px;
+    height: fit-content;
     line-height: 1.7em;
+    margin-top: 12px;
     margin-bottom: 42px;
     border-radius: 12px;
     display: grid;
